packages/parser/test/parser/E0139-import-declaration.txt
import test, "./test"
===== err =====
anonymous:1:13: ParseError: E0139 - Expected identifier after import declaration specifier imported name
1 | import test, "./test"
  |             ^

anonymous:1:13: ParseError: E0173 - Expected `from` keyword after import declaration specifiers
1 | import test, "./test"
  |             ^
